@@ -6,14 +6,13 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
+import javax.mail.MessagingException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Bean;
-import org.springframework.mail.MailException;
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.stereotype.Service;
 import org.tdl.vireo.model.EmailRecipient;
@@ -32,18 +31,18 @@ import org.tdl.vireo.model.User;
 import org.tdl.vireo.model.repo.ActionLogRepo;
 import org.tdl.vireo.model.repo.EmailWorkflowRuleRepo;
 import org.tdl.vireo.model.repo.FieldPredicateRepo;
+import org.tdl.vireo.model.repo.SubmissionRepo;
 import org.tdl.vireo.model.repo.impl.AbstractEmailRecipientRepoImpl;
 import org.tdl.vireo.utility.TemplateUtility;
 
-import edu.tamu.weaver.email.service.EmailSender;
-import edu.tamu.weaver.email.service.WeaverEmailService;
+import com.fasterxml.jackson.core.JsonProcessingException;
 
 /**
  * Provide e-mail sending specific to the Submission process.
  *
  * E-mails are built utilizing SimpleMailMessage and then sent via EmailSender.
  *
- * @see EmailSender
+ * @see VireoEmailSender
  * @see SimpleMailMessage
  */
 @Service
@@ -58,29 +57,28 @@ public class SubmissionEmailService {
     private ActionLogRepo actionLogRepo;
 
     @Autowired
-    private WeaverEmailService emailSender;
-
-    @Autowired
     private EmailWorkflowRuleRepo emailWorkflowRuleRepo;
 
     @Autowired
     private FieldPredicateRepo fieldPredicateRepo;
 
     @Autowired
+    private SubmissionRepo submissionRepo;
+
+    @Autowired
     private TemplateUtility templateUtility;
 
-    @Bean
-    public WeaverEmailService weaverEmailService()   {
-        return new WeaverEmailService();
-    }
+    @Autowired
+    private VireoEmailSender emailSender;
 
     /**
      * Manually send the e-mails to the advisors for a given Submission.
      *
      * @param user Associated User.
-     * @param submission Associated Submission.
      */
-    public void sendAdvisorEmails(User user, Submission submission) {
+    public void sendAdvisorEmails(User user, Long submissionId) {
+        Submission submission = submissionRepo.findById(submissionId).get();
+
         EmailRecipient advisorRecipient = abstractEmailRecipientRepoImpl.createAdvisorRecipient();
         List<EmailWorkflowRule> emailWorkflowRules = emailWorkflowRuleRepo.findByEmailRecipientAndIsDisabled(advisorRecipient, false);
 
@@ -98,7 +96,7 @@ public class SubmissionEmailService {
                 String content = templateUtility.compileTemplate(template, submission);
 
                 List<FieldValue> advisorList = submission.getFieldValuesByPredicateValue("dc.contributor.advisor");
-                SimpleMailMessage smm = new SimpleMailMessage();
+
                 List<String> recipientList = new ArrayList<>();
                 advisorList.forEach(afv -> {
                   for (String afvcontact : afv.getContacts()) {
@@ -109,13 +107,14 @@ public class SubmissionEmailService {
                 });
 
                 if (!recipientList.isEmpty()) {
-                    smm.setFrom(emailSender.getFrom());
-                    smm.setTo(recipientList.toArray(new String[0]));
-                    smm.setSubject(subject);
-                    smm.setText(content);
+                    try {
+                        String[] to = recipientList.toArray(new String[0]);
+                        emailSender.sendEmail(to, subject, content);
 
-                    emailSender.send(smm);
-                    emailed = true;
+                        emailed = true;
+                    } catch (MessagingException me) {
+                        LOG.error("Problem sending email: " + me.getMessage());
+                    }
                 }
             }
 
@@ -131,42 +130,51 @@ public class SubmissionEmailService {
      * Send an e-mail associated with the given user and submission.
      *
      * @param user Associated User.
-     * @param submission Associated Submission.
+     * @param submissionId ID of the associated Submission.
      * @param data Mapping of data.
      *
      * @throws JsonProcessingException
      * @throws IOException
      */
-    public void sendAutomatedEmails(User user, Submission submission, Map<String, Object> data) throws JsonProcessingException, IOException {
+    public void sendAutomatedEmails(User user, Long submissionId, Map<String, Object> data) throws JsonProcessingException, IOException {
+        Submission submission = submissionRepo.findById(submissionId).get();
+
         if (data.containsKey("sendEmailToRecipient") && (boolean) data.get("sendEmailToRecipient")) {
             String subject = templateUtility.compileString((String) data.get("subject"), submission);
             String templatedMessage = templateUtility.compileString((String) data.get("message"), submission);
             StringBuilder recipientEmails = new StringBuilder();
-            SimpleMailMessage smm = new SimpleMailMessage();
 
             List<String> recipientEmailAddresses = buildEmailRecipients("recipientEmails", submission, data);
-            smm.setTo(recipientEmailAddresses.toArray(new String[0]));
-
-            recipientEmails.append("Email sent to: [ " + String.join(";", recipientEmailAddresses) + " ]; ");
+            List<String> recipientCcEmailAddresses = new ArrayList<>();
 
             if (data.containsKey("sendEmailToCCRecipient") && (boolean) data.get("sendEmailToCCRecipient")) {
-                List<String> ccRecipientEmailAddresses = buildEmailRecipients("ccRecipientEmails", submission, data);
-                smm.setCc(ccRecipientEmailAddresses.toArray(new String[0]));
-                recipientEmails.append(" and cc to: [ " + String.join(";", ccRecipientEmailAddresses) + " ]; ");
+                recipientCcEmailAddresses = buildEmailRecipients("ccRecipientEmails", submission, data);
             }
 
-            if (user.getSetting("ccEmail") != null && user.getSetting("ccEmail").equals("true")) {
-                String preferredEmail = user.getSetting("preferedEmail");
-                smm.setBcc(preferredEmail == null ? user.getEmail() : preferredEmail);
+            try {
+                String[] to = recipientEmailAddresses.toArray(new String[0]);
+                String[] cc = recipientCcEmailAddresses.toArray(new String[0]);
+                String[] bcc = new String[] { };
+
+                recipientEmails.append("Email sent to: [ " + String.join(";", recipientEmailAddresses) + " ]; ");
+
+                if (data.containsKey("sendEmailToCCRecipient") && (boolean) data.get("sendEmailToCCRecipient")) {
+                    List<String> ccRecipientEmailAddresses = buildEmailRecipients("ccRecipientEmails", submission, data);
+                    cc = ccRecipientEmailAddresses.toArray(new String[0]);
+                    recipientEmails.append(" and cc to: [ " + String.join(";", ccRecipientEmailAddresses) + " ]; ");
+                }
+
+                if (user.getSetting("ccEmail") != null && user.getSetting("ccEmail").equals("true")) {
+                    String preferredEmail = user.getSetting("preferedEmail");
+                    bcc = new String[] { preferredEmail == null ? user.getEmail() : preferredEmail } ;
+                }
+
+                emailSender.sendEmail(to, cc, bcc, subject, templatedMessage);
+
+                actionLogRepo.createPublicLog(submission, user, recipientEmails.toString() + subject + ": " + templatedMessage);
+            } catch (MessagingException me) {
+                LOG.error("Problem sending email: " + me.getMessage());
             }
-
-            smm.setFrom(emailSender.getFrom());
-            smm.setSubject(subject);
-            smm.setText(templatedMessage);
-
-            emailSender.send(smm);
-
-            actionLogRepo.createPublicLog(submission, user, recipientEmails.toString() + subject + ": " + templatedMessage);
         }
     }
 
@@ -174,10 +182,10 @@ public class SubmissionEmailService {
      * Process workflow and send e-mails as needed for the given submission.
      *
      * @param user Associated User.
-     * @param submission Associated Submission.
+     * @param submissionId The ID of the submission.
      */
-    public void sendWorkflowEmails(User user, Submission submission) {
-        SimpleMailMessage smm = new SimpleMailMessage();
+    public void sendWorkflowEmails(User user, Long submissionId) {
+        Submission submission = submissionRepo.findById(submissionId).get();
 
         List<EmailWorkflowRule> rules = submission.getOrganization().getAggregateEmailWorkflowRules();
         Map<Long, List<String>> recipientLists = new HashMap<>();
@@ -205,21 +213,14 @@ public class SubmissionEmailService {
                     recipientLists.get(templateId).add(email);
 
                     try {
-                        LOG.debug("\tSending email to recipient at address " + email);
-
-                        smm.setTo(email);
-
                         if ("true".equals(user.getSetting("ccEmail"))) {
                             String preferedEmail = user.getSetting("preferedEmail");
-                            smm.setBcc(preferedEmail == null ? user.getEmail() : preferedEmail);
+                            String bcc = preferedEmail == null ? user.getEmail() : preferedEmail;
+                            emailSender.sendEmail(email, new String[] { bcc }, subject, content);
+                        } else {
+                            emailSender.sendEmail(email, subject, content);
                         }
-
-                        smm.setFrom(emailSender.getFrom());
-                        smm.setSubject(subject);
-                        smm.setText(content);
-
-                        emailSender.send(smm);
-                    } catch (MailException me) {
+                    } catch (MessagingException me) {
                         LOG.error("Problem sending email: " + me.getMessage());
                         recipientLists.get(templateId).remove(email);
                     }
@@ -243,7 +244,6 @@ public class SubmissionEmailService {
     private List<String> buildEmailRecipients(String property, Submission submission, Map<String, Object> data) {
         List<String> recipients = new ArrayList<>();
         List<HashMap<String, Object>> emails = (List<HashMap<String, Object>>) data.get(property);
-
         emails.forEach(emailRecipientMap -> {
             EmailRecipient recipient = buildEmailRecipient(emailRecipientMap, submission);
             if (recipient != null) {
@@ -285,9 +285,10 @@ public class SubmissionEmailService {
         }
         case CONTACT: {
           String label = (String) emailRecipientMap.get("name");
-          FieldPredicate fp = fieldPredicateRepo.getOne(new Long((Integer)emailRecipientMap.get("data")));
-          if(label != null & fp != null) {
-            recipient = new EmailRecipientContact(label, fp);
+          
+          Optional<FieldPredicate> fp = fieldPredicateRepo.findById(Long.valueOf((int) emailRecipientMap.get("data")));
+          if (label != null & fp.isPresent()) {
+            recipient = new EmailRecipientContact(label, fp.get());
           }
           break;
         }
